test/libhyperion/syntaxTests/functionTypes/function_type_named_call.hyp
contract C {
    function f() pure public {
        function(uint) returns (uint) x;
        x({a:2});
    }
}
// ----
// TypeError 4974: (93-101): Named argument "a" does not match function declaration.
